--- a/src/views/export.ejs
+++ b/src/views/export.ejs
@@ -1,39 +1,73 @@
-<div class="">
-        <div class="">
-            <h1 class="">Requests Report</h1>
-
-            <table class="">
-                <thead>
-                    <tr>
-                        <th>Name</th>
-                        <th>Total</th>
-                        <th>Status</th>
-                        <th>Expense Date</th>
-                        <th>Authorized By</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <% pettyCashRequests.forEach((request)=> { %>
+    <!DOCTYPE html>
+    <html lang="en">
+    
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Report Page</title>
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
+            integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
+            integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css"
+            integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+        <link rel="stylesheet" href="css/styles.css">
+        <link rel="icon" href="favicon.ico" type="image/x-icon">
+    </head>
+    
+    <body>
+    
+        <div class="jumbotron text-center bg-light">
+            <div class="container">
+                <h1 class="display-6">Requests Report</h1>
+                <table class="table table-striped">
+                    <thead>
                         <tr>
-                            <td>
-                                <%= request.name %>
-                            </td>
-                            <td>
-                                <%= request.total %>
-                            </td>
-                            <td>
-                               <%= request.status %>
-                            </td>
-                            <td>
-                               <%= request.date %>
-                            </td>
-                            <td>
-                               <%= request.authorizedBy %>
-                            </td>
+                            <th>Form Name</th>
+                            <th>Total</th>
+                            <th>Status</th>
+                            <th>Expense Date</th>
+                            <th>Authorized By</th>
                         </tr>
-                        <% }) %>
-                </tbody>
-            </table>
+                    </thead>
+                    <tbody>
+                        <% pettyCashRequests.forEach((request)=> { %>
+                            <tr>
+                                <td>
+                                    <%= request.name %>
+                                </td>
+                                <td>
+                                    <%= request.total %>
+                                </td>
+                                <td>
+                                    <%= request.status %>
+                                </td>
+                                <td>
+                                    <%= request.date %>
+                                </td>
+                                <td>
+                                    <%= request.authorizedBy %>
+                                </td>
+                            </tr>
+                            <% }) %>
+                    </tbody>
+                </table>
+            </div>
         </div>
-    </div>
+    
+        <footer class="bg-light text-center py-3">© Cyberbyte Software <%= 2023 %>
+        </footer>
+    
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+            crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js"
+            integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+            crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js"
+            integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+            crossorigin="anonymous"></script>
+    </body>
+    
+    </html>
 
