--- a/src/views/export.ejs
+++ b/src/views/export.ejs
@@ -54,19 +54,13 @@
                 </table>
             </div>
         </div>
-    
+        <div class="row">
+            <div class="col">
+                <button onclick="window.print()" class="btn btn-primary">print</button>
+            </div>
+        </div>
         <footer class="bg-light text-center py-3">© Cyberbyte Software <%= 2023 %>
         </footer>
-    
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-            crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js"
-            integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-            crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js"
-            integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-            crossorigin="anonymous"></script>
     </body>
     
     </html>
