--- a/src/views/export.ejs
+++ b/src/views/export.ejs
@@ -57,7 +57,7 @@
                     </div>
                     <div class="row">
                         <div class="col">
-                            <button onclick="window.print()" class="btn btn-primary">Print</button>
+                            <button onclick="window.print()" class="btn btn-primary d-print-none">Print</button>
                         </div>
                     </div>
         </div>
